flux/flux-system/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
  selector:
    app: redis

---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 5672
      targetPort: 5672
      protocol: TCP
      name: rabbitmq
  selector:
    app: rabbitmq

---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: uberdb
  selector:
    app: uberdb

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: default
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: redis
        image: "redis"
        ports:
        - containerPort: 6379

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
  namespace: default
  labels:
    app: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: rabbitmq
        image: "rabbitmq:alpine"
        ports:
        - containerPort: 5672
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uberdb
  namespace: default
  labels:
    app: uberdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uberdb
  template:
    metadata:
      labels:
        app: uberdb
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: uberdb
        image: "postgres"
        ports:
        - containerPort: 5432
