flux/flux-system/ubersystem.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ubersystem-test
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: web
  selector:
    app: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks.dev.magevent.net
  namespace: default
spec:
  rules:
  - host: eks.dev.magevent.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ubersystem-test
            port:
              number: 80
  ingressClassName: nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: default
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      volumes:
      - name: web-uploads
        persistentVolumeClaim:
          claimName: web-uploads
      terminationGracePeriodSeconds: 5
      containers:
      - name: web
        image: "ghcr.io/magfest/magprime:main"
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/app/plugins/uber/uploaded_files"
          name: web-uploads

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: celery-beats
  namespace: default
  labels:
    app: celery-beats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-beats
  template:
    metadata:
      labels:
        app: celery-beats
    spec:
      volumes:
      - name: web-uploads
        persistentVolumeClaim:
          claimName: web-uploads
      terminationGracePeriodSeconds: 5
      containers:
      - name: celery-beats
        image: "ghcr.io/magfest/magprime:main"
        args: ["celery-beat"]
        volumeMounts:
        - mountPath: "/app/plugins/uber/uploaded_files"
          name: web-uploads

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-worker
  namespace: default
  labels:
    app: celery-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      volumes:
      - name: web-uploads
        persistentVolumeClaim:
          claimName: web-uploads
      terminationGracePeriodSeconds: 5
      containers:
      - name: celery-worker
        image: "ghcr.io/magfest/magprime:main"
        args: ["celery-worker"]
        volumeMounts:
        - mountPath: "/app/plugins/uber/uploaded_files"
          name: web-uploads
